dark mode: fix line color in table

--- a/stylesheets/_shared.scss
+++ b/stylesheets/_shared.scss
@@ -576,6 +576,7 @@ footer {
         appearance: none
     }
 
+    .table > thead > tr > th,
     .table > tbody > tr > th,
     .table > tbody > tr > td {
         border-color: #444;
